working on subheading of beers page

--- a/app/src/components/all-beers/all-beers.html
+++ b/app/src/components/all-beers/all-beers.html
@@ -21,6 +21,7 @@
             </tr>
         </tbody>
     </table> -->
+    <h3>Select a Beer to See Its Reviews</h3>
     <li class="beer-listing" ng-repeat="beer in $ctrl.beers | orderBy: 'brewery' track by $index"
     ui-sref="beer({
         id: beer._id
