--- a/app/src/components/all-beers/all-beers.scss
+++ b/app/src/components/all-beers/all-beers.scss
@@ -8,7 +8,13 @@
     margin-bottom: 2%;
     .beer-listing{
         text-align: center;
-        color: $white;
+        color: $accent;
+    }
+    h3 {
+        margin: 10px 0 0 0;
+        font-size: 1.6rem;
+        text-align: center;
+        color: $black;
     }
     table {
         width: 70%;
