--- a/app/src/components/add-beers/add-beers.html
+++ b/app/src/components/add-beers/add-beers.html
@@ -1,24 +1,20 @@
 <section ng-class="$ctrl.styles.add_beers">
     <h3>Use the Form Below to Add a Beer</h3>
-    <div class="add-beer">
-        <div>
-            <h3>Enter the Beer's Information</h3>
-            <label>Name</label>
-            <input ng-model="$ctrl.name" maxlength="50">
+    <form class="add-beer">
+        <i class="fa fa-times fa-2x" aria-hidden="true" ng-click="$ctrl.backToAll()"></i>
+        <h4>
+            Enter the Beer's Information
+        </h4>
+        <div class="entry-fields">
+                <label for="brewery">Brewery</label>
+                <input id="brewery" ng-model="$ctrl.brewery" maxlength="50">          
+                <label for="name">Name</label>
+                <input id="name" ng-model="$ctrl.name" maxlength="50">
+                <label for="style">Style</label>
+                <input id="style" ng-model="$ctrl.style" maxlength="30">
+                <label for="abv">ABV</label>
+                <input id="abv" type="number" min="1" max="20" ng-model="$ctrl.abv">
         </div>
-        <div>
-            <label>Style</label>
-            <input ng-model="$ctrl.style" maxlength="30">
-        </div>
-        <div>
-            <label>Brewery</label>
-            <input ng-model="$ctrl.brewery" maxlength="50">
-        </div>
-        <div>
-            <label>ABV</label>
-            <input type="number" min="1" max="20" ng-model="$ctrl.abv">
-        </div>
-        <button ng-click="$ctrl.addBeer()">Add</button>
-        <button ng-click="$ctrl.backToAll()">Cancel</button>       
-    </div>
+        <button ng-click="$ctrl.addBeer()">Add</button>      
+    </form>
 </section>
