--- a/app/src/components/all-beers/all-beers.html
+++ b/app/src/components/all-beers/all-beers.html
@@ -1,35 +1,15 @@
 <section ng-class="$ctrl.styles.all_beers">  
-    
-    <!-- <table>
-        <thead>
-            <tr>
-                <th>Brewery</th>
-                <th>Beer</th>
-                <th>Style</th>
-                <th>ABV</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="beer in $ctrl.beers | orderBy: 'brewery' track by $index"
-                ui-sref="beer({
-                    id: beer._id
-                })">
-                <td>{{beer.brewery}}</td>
-                <td>{{beer.name}}</td>
-                <td>{{beer.style}}</td>
-                <td>{{beer.abv}}</td>
-            </tr>
-        </tbody>
-    </table> -->
     <h3>Select a Beer to See Its Reviews</h3>
-    <li class="beer-listing" ng-repeat="beer in $ctrl.beers | orderBy: 'brewery' track by $index"
+    <div class="beer-listing" ng-repeat="beer in $ctrl.beers | orderBy: 'brewery' track by $index"
     ui-sref="beer({
         id: beer._id
     })">
-    <span>{{beer.brewery}}</span>
-    <span>{{beer.name}}</span>
-    <span>{{beer.style}}</span>
-    <span>{{beer.abv}}</span>
-    </li>
+        <div class="title-line">
+            {{beer.brewery}} {{beer.name}}
+        </div>
+        <div class="detail-line">
+            {{beer.style}} {{beer.abv}}
+        </div>
+    </div>
 
 </section>
