--- a/app/src/components/all-beers/all-beers.scss
+++ b/app/src/components/all-beers/all-beers.scss
@@ -1,51 +1,25 @@
 @import 'colors';
+@import 'layout';
 @import 'buttons';
 
 :local(.all_beers) {
     box-sizing: border-box;
     color: $black;
-    font-size: 1.6rem;
     margin-bottom: 2%;
     .beer-listing{
         text-align: center;
         color: $accent;
+        width: 80%;
+        margin: 3% auto;
+        border-bottom: 1px solid $accent;
+        .title-line {
+            font-size: 1.8rem;
+        }
+        .detail-line {
+            font-size: 1.4rem;
+        }
     }
     h3 {
-        margin: 10px 0 0 0;
-        font-size: 1.6rem;
-        text-align: center;
-        color: $black;
-    }
-    table {
-        width: 70%;
-        margin: 0 auto;
-        border-radius: 1.6rem;
-        border-collapse: collapse;
-        background-color: $content;
-        td, th {
-            border-left: 1px solid $accent;
-            border-top:1px solid $accent;
-        }
-        td {
-            text-align: center;
-        }
-        th:nth-child(1) {
-            width: 35%;
-        }
-        th:nth-child(2) {
-            width: 30%;
-        }
-        th:nth-child(3) {
-            width: 25%;
-        }
-        th:nth-child(4) {
-            width: 10%;
-        }    
-        th {
-            border-top: none;
-        }    
-        td:first-child, th:first-child {
-            border-left: none;
-        }
+        @include content-heading();
     }
 }
