--- a/app/src/scss/partials/_buttons.scss
+++ b/app/src/scss/partials/_buttons.scss
@@ -1,15 +1,13 @@
 @mixin button() {
     padding: 7px 0 9px 0;
     text-align: center;
-    background-color: $button;
     width: 110px;
     border: none;
     outline: none;
-    border-radius: 5px 15px 15px 5px;
+    border-radius: 15px;
     span {
         font-size: 1.4rem;
         font-weight: bold;
-        // vertical-align: text-top;
         padding: 0 0 0 10px;
     }
 }
