--- a/app/src/scss/partials/_layout.scss
+++ b/app/src/scss/partials/_layout.scss
@@ -104,7 +104,7 @@
 @mixin content-area() {
     position: absolute;
     width: 100%;
-    top: 110px;
+    top: 115px;
     bottom: 50px;
     overflow: auto; 
     color: $white;      
@@ -114,7 +114,7 @@
 @mixin sub-heading() {
     position: fixed;
     width: 100%;
-    height: 70px;
+    height: 75px;
     top: 40px;
     left: 0;
     overflow: hidden;
@@ -124,4 +124,11 @@
         margin: 0;
         font-size: 2.8rem;
     }
+}
+
+@mixin content-heading() {
+    margin: 10px 0 0 0;
+    font-size: 1.6rem;
+    text-align: center;
+    color: $black;
 }
