--- a/app/src/components/beer/beer.html
+++ b/app/src/components/beer/beer.html
@@ -6,8 +6,8 @@
     </header>
     <div class="sub-heading">
         <h2>Beers!</h2>
-        <div ng-show="true" class="add-beer-btn" ng-click="$ctrl.goToAddBeer()">
-                <button><span>Add a Beer</span></button>
+        <div ng-show="true" class="add-beer-btn" ng-click="$ctrl.goToAddReview()">
+                <button><span>Add a Review</span></button>
                 <div class="bottle-neck"></div>
         </div>
     </div>
