adjust spacing and styling for bottle button

--- a/app/src/components/about/about.html
+++ b/app/src/components/about/about.html
@@ -5,8 +5,8 @@
         </div>
     </header>
     <div class="sub-heading">
-        <h2>Beers!</h2>
-        <div ng-show="true" class="add-beer-btn" ng-click="$ctrl.goToAddBeer()">
+        <h2>Welcome to BeerCrit!</h2>
+        <div class="add-beer-btn" ng-click="$ctrl.goToAddBeer()">
                 <button><span>Add a Beer</span></button>
                 <div class="bottle-neck"></div>
         </div>
