--- a/app/src/components/beers/beers.html
+++ b/app/src/components/beers/beers.html
@@ -6,7 +6,7 @@
     </header>
     <div class="sub-heading">
         <h2>Beers!</h2>
-        <div ng-show="true" class="add-beer-btn" ng-click="$ctrl.goToAddBeer()">
+        <div class="add-beer-btn" ng-click="$ctrl.goToAddBeer()">
                 <button><span>Add a Beer</span></button>
                 <div class="bottle-neck"></div>
         </div>
