--- a/app/src/components/profile/profile.html
+++ b/app/src/components/profile/profile.html
@@ -6,9 +6,9 @@
     </header>
     <div class="sub-heading">
         <h2>Beers!</h2>
-        <div class="add-beer-btn" ng-click="$ctrl.goToAddBeer()">
+        <div class="bottle-btn" ng-click="$ctrl.goToAddBeer()">
                 <button><span>Add a Beer</span></button>
-                <div class="bottle-neck"></div>
+                <div></div>
         </div>
     </div>
     <section class="content">
