--- a/app/src/components/profile/profile.scss
+++ b/app/src/components/profile/profile.scss
@@ -8,20 +8,8 @@
     }
     .sub-heading {
         @include sub-heading();
-        .add-beer-btn {
-            text-align: center;
-            margin: 0 0 0 40px;
-            button {
-                @include button();
-            }
-            .bottle-neck {
-                display: inline-block;
-                width: 40px;
-                height: 18px;
-                margin: 0 0 -4px -5px;
-                border-radius: 0 5px 5px 0;
-                background-color: $button;
-            }
+        .bottle-btn {
+            @include bottle-btn();
         }
     }
     .content {
