--- a/app/src/components/add-beers/add-beers.scss
+++ b/app/src/components/add-beers/add-beers.scss
@@ -8,49 +8,6 @@
         @include content-heading();
     }
     .add-beer {
-        width: 80%;
-        margin: 4% auto;
-        padding: 3% 0 10%;
-        text-align: center;
-        color: $accent;
-        background-color: $content;
-        border-radius: 15px;
-        position: relative;
-        i {
-            position: absolute;
-            top: 2%;
-            right: 3%;            
-        }
-        h4 {
-            font-size: 1.4rem;
-        }
-        .entry-fields {
-            label {
-                display: block;
-                font-size: 1.4rem;
-                margin: 3% 0 1% 0;
-            }
-            input {
-                font-size: 1.8rem;
-                -webkit-appearance: none;
-                border: none;
-                border-radius: 15px;
-                text-align: center;
-            }
-            input:focus {
-                border-radius: 15px;
-                
-                outline: none;
-                box-shadow: inset 0 0 5px 1px $footer;
-            }
-
-            margin-bottom: 5%;
-        }
-        button {
-            @include button();
-            margin: 0 2%;
-            background-color: $accent;
-        }
+        @include entry-form();
     }
-
 }
