--- a/app/src/scss/partials/_layout.scss
+++ b/app/src/scss/partials/_layout.scss
@@ -51,6 +51,7 @@
         }           
     }
 }
+
 @mixin desktop-footer() {
     box-sizing: border-box;
     padding: 12px 0;
@@ -101,6 +102,7 @@
         }
     }
 }
+
 @mixin content-area() {
     position: absolute;
     width: 100%;
@@ -111,6 +113,7 @@
     background-color: $grey;
     background-size: 100%;
 }
+
 @mixin sub-heading() {
     position: fixed;
     width: 100%;
@@ -131,4 +134,54 @@
     font-size: 1.6rem;
     text-align: center;
     color: $black;
+}
+
+@mixin entry-form() {
+    width: 80%;
+    margin: 4% auto;
+    padding: 3% 0 10%;
+    text-align: center;
+    color: $accent;
+    background-color: $content;
+    border-radius: 15px;
+    position: relative;
+    i {
+        position: absolute;
+        top: 2%;
+        right: 3%;            
+    }
+    h4 {
+        font-size: 1.4rem;
+    }
+    .entry-fields {
+        label {
+            display: block;
+            font-size: 1.4rem;
+            margin: 3% 0 1% 0;
+        }
+        input[type='text'], input[type='number'] {
+            font-size: 1.8rem;
+            -webkit-appearance: none;
+            border: none;
+            border-radius: 15px;
+            text-align: center;
+        }
+        input[type='text']:focus, input[type='number']:focus {
+            border-radius: 15px;               
+            outline: none;
+            box-shadow: inset 0 0 5px 1px $footer;
+        }
+        textarea {
+            resize: none;
+            width: 60%;
+            height: 40%;
+        }
+        margin-bottom: 5%;
+    }
+    button {
+        @include button();
+        margin: 0 2%;
+        background-color: $accent;
+    }
+
 }
