styled the home page using a png background image and media queries

--- a/app/src/components/about/about.html
+++ b/app/src/components/about/about.html
@@ -1,13 +1,13 @@
 <section ng-class="$ctrl.styles.about">
     <header>
         <div class="app-name">
-            <h1 ui-sref="about">BeerCrit</h1>
+            <h1 ui-sref="about">BrrrApp</h1>
         </div>
     </header>
     <div class="sub-heading">
-        <h2>Welcome to BeerCrit!</h2>
-        <div class="bottle-btn" ng-click="$ctrl.goToAddBeer()">
-                <button><span>Add a Beer</span></button>
+        <h2>Welcome!</h2>
+        <div class="bottle-btn" ui-sref="beers">
+                <button><span>Get Started</span></button>
                 <div></div>
         </div>
     </div> 
