--- a/app/src/components/profile/profile.html
+++ b/app/src/components/profile/profile.html
@@ -1,7 +1,7 @@
 <section ng-class="$ctrl.styles.profile">
     <header>
         <div class="app-name">
-            <h1 ui-sref="about">BeerCrit</h1>
+            <h1 ui-sref="about">BrrrApp</h1>
         </div>
     </header>
     <div class="sub-heading">
