--- a/app/src/components/about-app/about-app.html
+++ b/app/src/components/about-app/about-app.html
@@ -1,14 +1,9 @@
 <section ng-class="$ctrl.styles.app">
-    <div>
-        <div class="hero">
-            <div class="hero-text">
-                <p>The Beer Reviewed Journal serves as your source for finding, saving, and sharing your thoughts on a beer. While there are many reasons why you may want to analyze the minute details of what differenciates one beer from another, the main focus here is simply to record how drinkable you find the beer to be.</p>
-                <p>Would you drink this beer again?</p>
-                <p>Not only does this help you remember if a beer is worth buying again for yourself, but by looking up the reviews of others, it can also help you decide which beer to bring to a social gathering. Remember the beers you like, forget the ones you don't.</p>
-                <p>Click on the button below to sign up and get started.</p>
-            </div>
-            <img src="/img/beer-mug.jpg" alt="Picture of Beer Mug">
-        </div>   
-        <button class="get-started-btn" ui-sref="beers">Get Started!</button>
-    </div>
+    <div class="hero">
+        <div class="hero-text">
+            <p><strong>BrrrApp</strong> serves as your source for finding, saving, and sharing your thoughts on beers. While there are many reasons why you may want to analyze the minute details of what differenciates one beer from another, the main focus here is simply to record how drinkable you find the beer to be.</p>
+            <p>Would you drink this beer again?</p>
+            <p>Not only does this help you remember if a beer is worth buying again for yourself, but by looking up the reviews of others, it can also help you decide which beer to bring to a social gathering. Remember the beers you like, forget the ones you don't.</p>
+        </div>
+    </div>   
 </section>
