--- a/app/src/components/about-app/about-app.scss
+++ b/app/src/components/about-app/about-app.scss
@@ -1,30 +1,44 @@
 @import 'colors';
-@import 'buttons';
 
 :local(.app) {
     .hero {
-        width: 90%;
-        margin: 0 8% 0 2%;
-        border-radius: 0 2em 2em 0;
-        background: linear-gradient(-90deg, black, black, transparent);
-        
+        background: url('/img/beer-pint.png') no-repeat center -15px;
+        background-size: cover;
+        min-height: 600px;       
         .hero-text {
             vertical-align: top;
-            padding: 2% 0 0 25%;
-            color: $grey;
-            display: inline-block;
-            width: 44%;
+            color: $black;
+            width: 50%;
+            margin: 0 auto;
+            padding: 13% 0 5% 0;
             p {
-                padding-left: 15%;
+                font-size: 1.4rem;                
                 text-align: center;
             }
         }
         img {
             width: 30%;
             border-radius: 2em;       
-        }        
-    }
-    .get-started-btn {
-        @include button();
+        }
+
+        @media (min-width: 350px) {
+            min-height: 700px;
+            .hero-text {
+                p {
+                    font-size: 1.6rem;
+                }
+            }
+        }
+        
+        @media (min-width: 768px) {
+            width: 75%;
+            margin: 0 auto;
+            min-height: 1200px;
+            .hero-text {
+                p {
+                    font-size: 2rem;
+                }
+            }
+        }
     }
 }
