add media queries for content width on add-review and all-beers

--- a/app/src/components/add-review/add-review.scss
+++ b/app/src/components/add-review/add-review.scss
@@ -10,4 +10,18 @@
     .add-review {
         @include entry-form();
     }
+
+    @media (min-width: 768px)
+    {
+        .add-review {
+            width: 60%;
+            padding: 3% 0;
+        }
+        .entry-fields {
+            textarea {
+                height: 50px;
+                font-size: 1.4rem;
+            }
+        }
+    }
 }
