--- a/app/src/components/account/signup/signup.scss
+++ b/app/src/components/account/signup/signup.scss
@@ -1,3 +1,10 @@
-.error {
-	color: red;
+:local(.signup) {
+    .username {
+        color: purple;
+    }
+    .error {
+        color: red;
+    }
 }
+
+
