--- a/app/src/components/account/user-auth/user-auth.html
+++ b/app/src/components/account/user-auth/user-auth.html
@@ -1,5 +1,5 @@
-<section>
-    <div>
+<section ng-class="$ctrl.styles.auth">
+    <div class="sign-in-or-up">
         <label>
             <input type="radio" ng-model="$ctrl.action" value="signin">
             Sign In
