--- a/app/src/components/account/signin/signin.html
+++ b/app/src/components/account/signin/signin.html
@@ -1,4 +1,4 @@
-<section>
+<section ng-class="$ctrl.styles.signin">
 	<h2>Sign in to access your account</h2>
 	<form name="auth" ng-submit="$ctrl.authenticate()">
 		<div>
