styled user auth modal; corrected form in order to enable submit upon enter

--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -12,3 +12,17 @@ body {
     margin: 0;
     padding: 0;
 }
+
+@media (max-width: 350px) {
+    .ngdialog.ngdialog-theme-default.custom-width-250 .ngdialog-content {
+        width: 250px;
+    }
+}
+
+@media (max-width: 480px) and (min-width: 350px) {
+    .ngdialog.ngdialog-theme-default.custom-width-350 .ngdialog-content {
+        width: 350px;
+    }
+}
+
+
