--- a/app/src/scss/partials/_colors.scss
+++ b/app/src/scss/partials/_colors.scss
@@ -33,9 +33,13 @@ $item: #005778;
 
 $blue: #005778;
 $aqua: #008e97;
+$light-aqua: #78c1ce;
+$orange: #faa75e;
+$light-orange: #f8c296;
 $green: #20f582;
 $red: #f52028;
 $light-red: #fa8f93;
 $black: #090909;
 $white: #fafafa;
 $grey: #d3d3d3;
+$dark-grey: #a9a9a9;
