--- a/app/src/components/account/signin/signin.html
+++ b/app/src/components/account/signin/signin.html
@@ -1,19 +1,15 @@
 <section ng-class="$ctrl.styles.signin">
-	<h2>Sign in to access your account</h2>
+	<h2>Sign in to BrrrApp</h2>
 	<form name="auth" ng-submit="$ctrl.authenticate()">
 		<div>
-			<label>
-				username: <input required ng-model="$ctrl.credentials.username">
-			</label>
+            <label for="username">username: </label>
+            <input required type="text" id="username" ng-model="$ctrl.credentials.username">		
 		</div>
-
 		<div>
-			<label>
-				password: <input required type="password" ng-model="$ctrl.credentials.password">
-			</label>
+            <label for="password">password: </label>
+            <input required type="password" id="password" ng-model="$ctrl.credentials.password">			
 		</div>
-
-		<button type="submit">Sign In</button>
+		<button type="submit">Submit</button>
 	</form>
 	<div class="error" ng-if='$ctrl.error'>{{$ctrl.error.reason}}</div>
 </section>
