--- a/app/src/components/account/signup/signup.html
+++ b/app/src/components/account/signup/signup.html
@@ -1,17 +1,15 @@
 <section ng-class="$ctrl.styles.signup">
-	<h2>Sign up for The Beer Reviewed Journal</h2>
+	<h2>Sign up for BrrrApp</h2>
 	<form name="auth" ng-submit="$ctrl.authenticate()">
 		<div>
-			<label class="username">
-				username: <input required ng-model="$ctrl.credentials.username">
-			</label>
+            <label for="username">username: </label>
+            <input required type="text" id="username" ng-model="$ctrl.credentials.username">		
 		</div>
 		<div>
-			<label>
-				password: <input required type="password" ng-model="$ctrl.credentials.password">
-			</label>
+            <label for="password">password: </label>
+            <input required type="password" id="password" ng-model="$ctrl.credentials.password">			
 		</div>
-		<button type="submit">Sign Up</button>
+		<button type="submit">Submit</button>
 	</form>
 	<div class="error" ng-if='$ctrl.error'>{{$ctrl.error.reason}}</div>
 </section>
