--- a/app/src/components/account/user-auth/user-auth.scss
+++ b/app/src/components/account/user-auth/user-auth.scss
@@ -1,13 +1,65 @@
+@import 'colors';
+
 :local(.auth) {
+    background-color: $white;
+    padding: 10px;
+    text-align: center;
     .sign-in-or-up {
-        width: 50%;
+        width: 80%;
         margin: 0 auto;
         text-align: center;
         label {
             margin: 0 1%;
         }
+        input[type='radio'] {
+            -webkit-appearance: none;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            outline: none;
+            box-shadow: 0 0 0 2px gray;
+          }
+          
+          input[type='radio']:checked {
+            box-shadow: 0 0 0 2px $orange;
+          }
+          
+          input[type='radio']:before {
+            content: '';
+            display: block;
+            width: 60%;
+            height: 60%;
+            margin: 20% auto;
+            border-radius: 50%;
+          }
+          
+          input[type='radio']:checked:before {
+            background: $orange;
+          }
     }
     label {
-        color: red;
+        color: $blue;
     }
+
+    input[type=text], input[type=password] {
+        -webkit-appearance: none;
+        margin: 3px;
+        border-radius: 15px;
+        border: 1px solid $dark-grey;
+    }
+
+    input[type=text]:focus, input[type=password]:focus {
+        outline: none;
+        box-shadow: inset 0 0 5px 1px $light-aqua;
+    }
+
+    button {
+        -webkit-appearance: none;
+        border: none;
+        border-radius: 15px;
+        background-color: $orange;
+        padding: 5px 10px;
+        margin-top: 10px;
+    }
+
 }
