removed colors no longer in palette from colors  partial; applied colors use assigned color values

--- a/app/src/components/add-review/add-review.scss
+++ b/app/src/components/add-review/add-review.scss
@@ -3,7 +3,7 @@
 @import 'buttons';
 
 :local(.add_review) {
-    color: $accent;
+    color: $content-text;
     h3 {
         @include content-heading();
     }
