--- a/app/src/components/all-beers/all-beers.scss
+++ b/app/src/components/all-beers/all-beers.scss
@@ -8,10 +8,10 @@
     margin-bottom: 2%;
     .beer-listing{
         text-align: center;
-        color: $accent;
+        color: $content-text;
         width: 80%;
         margin: 3% auto;
-        border-bottom: 1px solid $accent;
+        border-bottom: 1px solid $content-text;
         .title-line {
             font-size: 1.8rem;
             padding: 0 0 1% 0;
