--- a/app/src/components/account/user-auth/user-auth.scss
+++ b/app/src/components/account/user-auth/user-auth.scss
@@ -21,7 +21,7 @@
           }
           
           input[type='radio']:checked {
-            box-shadow: 0 0 0 2px $orange;
+            box-shadow: 0 0 0 2px $auth-accent;
           }
           
           input[type='radio']:before {
@@ -34,11 +34,11 @@
           }
           
           input[type='radio']:checked:before {
-            background: $orange;
+            background: $auth-accent;
           }
     }
     label {
-        color: $blue;
+        color: $auth-label;
     }
 
     input[type=text], input[type=password] {
@@ -50,14 +50,14 @@
 
     input[type=text]:focus, input[type=password]:focus {
         outline: none;
-        box-shadow: inset 0 0 5px 1px $light-aqua;
+        box-shadow: inset 0 0 5px 1px $input-focus;
     }
 
     button {
         -webkit-appearance: none;
         border: none;
         border-radius: 15px;
-        background-color: $orange;
+        background-color: $auth-accent;
         padding: 5px 10px;
         margin-top: 10px;
     }
