--- a/app/src/components/add-beers/add-beers.scss
+++ b/app/src/components/add-beers/add-beers.scss
@@ -3,7 +3,7 @@
 @import 'buttons';
 
 :local(.add_beers) {
-    color: $accent;
+    color: $content-text;
     h3 {
         @include content-heading();
     }
