--- a/app/src/components/all-beers/all-beers.scss
+++ b/app/src/components/all-beers/all-beers.scss
@@ -7,19 +7,7 @@
     color: $black;
     margin-bottom: 2%;
     .beer-listing{
-        text-align: center;
-        color: $content-text;
-        width: 80%;
-        margin: 3% auto;
-        border-bottom: 1px solid $content-text;
-        .title-line {
-            font-size: 1.8rem;
-            padding: 0 0 1% 0;
-        }
-        .detail-line {
-            font-size: 1.4rem;
-            padding: 0 0 1% 0;
-        }
+        @include listing();
     }
     h3 {
         @include content-heading();
