--- a/app/src/components/beer-reviews/beer-reviews.scss
+++ b/app/src/components/beer-reviews/beer-reviews.scss
@@ -22,18 +22,7 @@
 
     }
     .review-listing {
-        color: $content-text;
-        width: 80%;
-        margin: 3% auto;
-        border-bottom: 1px solid $content-text;
-        .comment-line {
-            font-size: 1.8rem;
-            padding: 0 0 1% 0;
-        }
-        .drink-again-line {
-            font-size: 1.4rem;
-            padding: 0 0 1% 0;
-        }
+        @include listing();
     }
     button {
         @include button();
