--- a/app/src/scss/partials/_layout.scss
+++ b/app/src/scss/partials/_layout.scss
@@ -136,6 +136,22 @@
     color: $black;
 }
 
+@mixin listing() {
+    text-align: center;
+    color: $content-text;
+    width: 80%;
+    margin: 3% auto;
+    border-bottom: 1px solid $content-text;
+    .title-line {
+        font-size: 1.8rem;
+        padding: 0 0 1% 0;
+    }
+    .detail-line {
+        font-size: 1.4rem;
+        padding: 0 0 1% 0;
+    }
+}
+
 @mixin entry-form() {
     width: 80%;
     margin: 4% auto;
