--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -13,6 +13,10 @@ body {
     padding: 0;
 }
 
+.capitalize {
+    text-transform: capitalize;
+}
+
 @media (max-width: 350px) {
     .ngdialog.ngdialog-theme-default.custom-width-250 .ngdialog-content {
         width: 250px;
