adjust paddign around close-x and move out to partial

--- a/app/src/components/beer-reviews/beer-reviews.scss
+++ b/app/src/components/beer-reviews/beer-reviews.scss
@@ -5,10 +5,7 @@
 :local(.reviews) {
     text-align: center;
     i {
-        position: absolute;
-        color: $content-text;
-        top: 2%;
-        right: 3%;            
+        @include close-x();          
     }
     .review-heading {
         margin: 0 0 5%;
