--- a/app/src/scss/partials/_layout.scss
+++ b/app/src/scss/partials/_layout.scss
@@ -183,6 +183,8 @@
         input[type='text'], input[type='number'] {
             font-size: 1.8rem;
             -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
             border: none;
             border-radius: 15px;
             text-align: center;
