--- a/app/src/components/account/signup/signup.html
+++ b/app/src/components/account/signup/signup.html
@@ -11,5 +11,5 @@
 		</div>
 		<button type="submit">Submit</button>
 	</form>
-	<div class="error" ng-if='$ctrl.error'>{{$ctrl.error.reason}}</div>
+	<div class="error" ng-if='$ctrl.error'>{{$ctrl.error}}</div>
 </section>
