--- a/app/src/components/add-review/add-review.html
+++ b/app/src/components/add-review/add-review.html
@@ -7,7 +7,7 @@
         </h4>
         <div class="entry-fields">
             <label for="drink-again">Would You Drink This Beer Again?</label>
-            <div id="drink-again">
+            <div id="drink-again" class="radio-select">
                 <span ng-repeat="drinkAgain in ['no', 'occasionally', 'yes']">
                     <input 
                         ng-model="$ctrl.drinkAgain" 
